Ignoring the stupid tiles now...

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 Temp/
 Common/
+Apps/NinjaCatCastle/data/levels/SideScrollerDesert
+Apps/NinjaCatCastle/data/levels/SideScrollerMetal
 *.sdf
 *.tlog
 *.idb
