Changed a bunch of things to what I think it should work like.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Temp/
 Common/
-*.png
+Apps/NinjaCatCastle/data/levels/SideScrollerDesert
+Apps/NinjaCatCastle/data/levels/SideScrollerMetal
 *.sdf
 *.tlog
 *.idb
