--- a/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj.filters
+++ b/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj.filters
@@ -96,9 +96,6 @@
     <ClCompile Include="src\sssf\gsm\ai\bots\RandomFloatingBot.cpp">
       <Filter>src\sssf\gsm\ai\bots</Filter>
     </ClCompile>
-    <ClCompile Include="src\sssf\gsm\ai\bots\RandomJumpingBot.cpp">
-      <Filter>src\sssf\gsm\ai\bots</Filter>
-    </ClCompile>
     <ClCompile Include="src\sssf\gsm\ai\BotRecycler.cpp">
       <Filter>src\sssf\gsm\ai</Filter>
     </ClCompile>
@@ -174,6 +171,9 @@
     <ClCompile Include="src\sssf\platforms\Windows\WindowsTimer.cpp">
       <Filter>src\sssf\platforms\Windows</Filter>
     </ClCompile>
+    <ClCompile Include="src\sssf\gsm\ai\bots\PounceBot.cpp">
+      <Filter>src\sssf\gsm\ai\bots</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\sssf_VS\stdafx.h">
@@ -207,9 +207,6 @@
       <Filter>src\sssf\graphics</Filter>
     </ClInclude>
     <ClInclude Include="src\sssf\gsm\ai\bots\RandomFloatingBot.h">
-      <Filter>src\sssf\gsm\ai\bots</Filter>
-    </ClInclude>
-    <ClInclude Include="src\sssf\gsm\ai\bots\RandomJumpingBot.h">
       <Filter>src\sssf\gsm\ai\bots</Filter>
     </ClInclude>
     <ClInclude Include="src\sssf\gsm\ai\Bot.h">
@@ -325,6 +322,9 @@
     </ClInclude>
     <ClInclude Include="src\sssf\os\GameOS.h">
       <Filter>src\sssf\os</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sssf\gsm\ai\bots\PounceBot.h">
+      <Filter>src\sssf\gsm\ai\bots</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
