Fmod should now work without having to install the API yourself Fixed attacking hitboxes so they register while standing still now Updated some comments on the sound engine to be more clear Changed file formats for current songs from MP3 to WAV (MP3s looped very, very badly)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Apps/NinjaCatCastle/data/levels/SideScrollerMetal
 *.tlog
 *.idb
 *.pdb
+#These are anti-ignores.. This forces specific files to NOT be ignored
+!Sound/
+!fmodL_vc.lib
+!fmodL.dll
