1. Changed lives head to the ninja cat 2. Made level 3 for camera testing (ctrl-3 in game to get to it) 3. Changed how the viewport works to look more up than down. If you want to change this for your level please tell me. 4. Changed some button positioning in the main menu 5. Added backbone classes for the armor and bomb cats 6. Removed some unused things from bot classes 7. Some playing with the propeller cat logic

--- a/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj
+++ b/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj
@@ -21,6 +21,8 @@
     <ClCompile Include="src\sssf\graphics\RenderList.cpp" />
     <ClCompile Include="src\sssf\graphics\TextureManager.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\BotRecycler.cpp" />
+    <ClCompile Include="src\sssf\gsm\ai\bots\ArmorBot.cpp" />
+    <ClCompile Include="src\sssf\gsm\ai\bots\BombBot.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\PropellerBot.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\PounceBot.cpp" />
     <ClCompile Include="src\sssf\gsm\physics\AABB.cpp" />
@@ -59,6 +61,8 @@
     <ClInclude Include="src\sssf\graphics\TextureManager.h" />
     <ClInclude Include="src\sssf\gsm\ai\Bot.h" />
     <ClInclude Include="src\sssf\gsm\ai\BotRecycler.h" />
+    <ClInclude Include="src\sssf\gsm\ai\bots\ArmorBot.h" />
+    <ClInclude Include="src\sssf\gsm\ai\bots\BombBot.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\PropellerBot.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\PounceBot.h" />
     <ClInclude Include="src\sssf\gsm\physics\AABB.h" />
