more annoying platforms garbage

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,51 @@ Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms52.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms53.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms6.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms7.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms19.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms2.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms21.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms29.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms34.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms35.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms36.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms37.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms38.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms39.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms44.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms45.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms46.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms47.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms48.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms49.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms54.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms55.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms56.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms57.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms58.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms59.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms8.png
+Apps/NinjaCatCastle/data/levels/Level 1/MetalPlatforms9.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms19.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms2.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms21.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms29.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms34.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms35.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms36.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms37.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms38.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms39.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms44.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms45.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms46.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms47.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms48.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms49.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms54.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms55.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms56.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms57.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms58.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms59.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms8.png
+Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms9.png
