1. setting up sounds 2. more tile ignores :|

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,27 @@ Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms58.png
 Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms59.png
 Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms8.png
 Apps/NinjaCatCastle/data/levels/Level 2/MetalPlatforms9.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms19.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms2.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms21.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms29.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms34.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms35.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms36.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms37.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms38.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms39.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms44.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms45.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms46.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms47.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms48.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms49.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms54.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms55.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms56.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms57.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms58.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms59.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms8.png
+Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms9.png
