1. ADDED HEALTH AND TREAT PICKUPS! 2. Updated tiled graphics for enemy and pickup placement to be more pretty 3. Fixed the propeller cat logic to be less stupid 4. Removed the quit button from the in game UI 5. You can now exit the level with escape and exit the game with escape from the menu 6. Added functioning health hearts to the in game UI 7. Increased shuriken speed 8. Tweaked diagonal throw speed to be a little bit less 9. Fixed some collision related crashes

--- a/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj
+++ b/SimpleSideScrollerFramework/SimpleSideScrollerFramework.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\sssf\gsm\ai\BotRecycler.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\ArmorBot.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\BombBot.cpp" />
+    <ClCompile Include="src\sssf\gsm\ai\bots\Pickup.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\PropellerBot.cpp" />
     <ClCompile Include="src\sssf\gsm\ai\bots\PounceBot.cpp" />
     <ClCompile Include="src\sssf\gsm\physics\AABB.cpp" />
@@ -63,6 +64,7 @@
     <ClInclude Include="src\sssf\gsm\ai\BotRecycler.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\ArmorBot.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\BombBot.h" />
+    <ClInclude Include="src\sssf\gsm\ai\bots\Pickup.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\PropellerBot.h" />
     <ClInclude Include="src\sssf\gsm\ai\bots\PounceBot.h" />
     <ClInclude Include="src\sssf\gsm\physics\AABB.h" />
