--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms58.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms59.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms8.png
 Apps/NinjaCatCastle/data/levels/Level 3/MetalPlatforms9.png
+Apps/NinjaCatCastle.rar
